--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "file-loader": "^6.2.0",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "img-loader": "^4.0.0",
     "mini-css-extract-plugin": "^2.7.2",
     "sass-loader": "^13.2.0",
     "webpack": "^5.75.0",
